  thouroughly tested! (Ideally you're profiles won't let you get stuck)
- Added better detection for druid "mana". It should now display
  the percentage of rage, energy, or mana, whichever is appropriate.
  Note: this has only had limited testing.
- Added cardinal directions and degrees tooltip for when you mouse over
  the direction indicator as well as tooltips for health/mana/xp bars

Version 0.9.1
-------------
- Added scrollbars to screenshot when image is too large to fit
- JGlideMon now released under the GNU GPL, see License.txt for
  more information

Version 0.9
-------------
- Added some extra debugging features, namely Help->Generate Debug Info,
  and File->Configuration->General->Log Debugging Info. Logs are also
  saved to Log.txt
- Added config options for the screenshot updater's buffer
  size and the timeout for updating a screenshot. The config window
  will tell you the size of your last screenshot and calculate the
  maximum size that it could be. This size represents an uncompressed
  image size. Keep in mind that the image is in fact compressed as
  a jpeg. Setting the buffer to the calculated size should ensure
  you won't have a problem but it is a significant over-estimate.
- Added checkbox to disable sending of keystrokes when screenshot
  tab is the current tab (note it is disabled when the program is first
  launched). Also, the screenshot tab no longer requires keyboard
  focus to send keys.

Version 0.8
-----------
- Added support for a tray icon and minimizing to the tray
  if Java 1.6+ is installed (JGlideMon will still function
  with Java 1.5+, there just won't be a tray icon)
- Removed the need for a textfield to have focus to send keys
  in the screenshot tab. Now keys are sent as long as the
  screenshot tab is the current tab. Note that you are not able
  to send the 4 arrow keys as this would cause you to change
  the selected tab. Use WASD instead. Note that the Screenshot