@@ -22,6 +22,7 @@ package jgm.gui.panes;
 
 import jgm.gui.updaters.StatusUpdater;
 
+import java.awt.*;
 import javax.swing.*;
 
 public class MobInfoPane extends Pane {
@@ -37,37 +38,50 @@ public class MobInfoPane extends Pane {
 	public MobInfoPane() {
 		super();
 
-		name = new JLabel("Target Name: ");
-		c.gridx = 0; c.gridy = 0; c.gridwidth = 3;
-		add(name, c);
+		JPanel lbls = new JPanel(new GridBagLayout());
+		
+		c.gridx = 0; c.gridy = 0; c.weightx = 0.0;
+		lbls.add(new JLabel("Target Name: "), c);
+		
+		name = new JLabel("No Target");
+		c.gridx++; c.weightx = 1.0;
+		lbls.add(name, c);
 
-		level = new JLabel("Target Level: ");
-		c.gridx = 0; c.gridy = 1;
-		add(level, c);
+		c.gridx = 0; c.gridy++; c.weightx = 0.0;
+		lbls.add(new JLabel("Target Level: "), c);
+		
+		level = new JLabel();
+		level.setFont(level.getFont().deriveFont(Font.BOLD));
+		c.gridx++; c.weightx = 1.0;
+		lbls.add(level, c);
 
+		c.gridx = 0; c.gridy = 0; c.gridwidth = 3; c.weightx = 1.0;
+		add(lbls, c);
+		
 		health = new JProgressBar(0, 100);
 		health.setString("Target's Health");
 		health.setStringPainted(true);
 		health.setValue(0);
-		c.gridx = 0; c.gridy = 2; c.gridwidth = 3; c.weightx = 1.0;
+		c.gridx = 0; c.gridy++; c.gridwidth = 3; c.weightx = 1.0;
 		add(health, c);
 
 		kills = new JLabel("Kills: 0", JLabel.CENTER);
-		c.gridx = 0; c.gridy = 3; c.gridwidth = 1;
+		c.gridx = 0; c.gridy++; c.gridwidth = 1;
 		add(kills, c);
 
 		loots = new JLabel("Loots: 0", JLabel.CENTER);
-		c.gridx = 1;
+		c.gridx++;
 		add(loots, c);
 
 		deaths = new JLabel("Deaths: 0", JLabel.CENTER);
-		c.gridx = 2;
+		c.gridx++;
 		add(deaths, c);
 	}
 
 	public void update(StatusUpdater s) {
-		name.setText("Target Name: " + ((s.targetName.equals("")) ? "No Target" : s.targetName));
-		level.setText("Target Level: " + ((s.targetLevel > 0) ? s.targetLevel : ""));
+		name.setText(s.targetName.equals("") ? "No Target" : s.targetName);
+		level.setText(s.targetLevel > 0 ? Integer.toString(s.targetLevel) : "");
+		level.setForeground(s.targetLevel > 0 ? jgm.wow.Mob.getMobColor(s.level, s.targetLevel) : Color.BLACK);
 		health.setValue((int) s.targetHealth);
 		health.setToolTipText(Integer.toString((int) s.targetHealth) + "%");
 
